--- a/Pages/layout.html
+++ b/Pages/layout.html
@@ -5,8 +5,8 @@
 		<title>{{ title }}</title>
 	{% endif %}
 	
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
-	<link rel="stylesheet" type="text/css" href="/static/fonts/all.css">
+	<link rel="stylesheet" type="text/css" href="/Resources/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/Resources/fonts/all.css">
 	
 </head>
 <body>
@@ -41,7 +41,7 @@
 {% endfor %}
 
 
-<script type="text/javascript" src="/static/js/script.js"></script>
+<script type="text/javascript" src="/Resources/js/script.js"></script>
 
 <footer class="main-footer">
 	<p> Bible Your Verses &copy; 2019 </p>
