--- a/Pages/addverse.html
+++ b/Pages/addverse.html
@@ -1,17 +1,19 @@
 {% extends 'layout.html' %}
-
+ 
 {% block body %}
 
-<div id="login-box" class="addsection">
+<div id="login_box" class="addsection">
 	<form action="/addverse" method="post">
 		<label for="book" >Book</label>
 		<input type="text" name="book" id="book" placeholder="Book" required><br>
 		<label for="chapter">Chapter</label>
 		<input type="integer" id="chapter" name="chapter" placeholder="chapter"required><br>
-		<label for="verse_no">Verse</label>
+		<label for="verse_no">Verse No</label>
 		<input type="integer" name="verse_no" placeholder="verse_no" id="verse_no"required><br>
 		<label for="verse">Verse</label>
-		<textarea name="verse" id="verse" placeholder="verse goes here" rows=10, cols=40 required></textarea><br>
+		<div class="clr"></div>
+		<textarea name="verse" id="verse" placeholder="verse goes here" rows=5, cols=25 required></textarea><br>
+		<!-- <div class="clr"></div> -->
 		<i  class="fas fa-plus-circle fa-2x"></i>
 		<input type=submit class="nbt" value="Add">
 	</form>
